--- a/src/Mzayad.Services.Tests/Mzayad.Services.Tests.csproj
+++ b/src/Mzayad.Services.Tests/Mzayad.Services.Tests.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuctionServiceTests.cs" />
+    <Compile Include="AutoBidServiceTests.cs" />
     <Compile Include="BidServiceTests.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Fakes\InMemoryDataContext.cs" />
