Mz-126 Add XP to ActivityEvents

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -310,6 +310,10 @@
     <Compile Include="Migrations\201509091452096_AddSessionLogTable.Designer.cs">
       <DependentUpon>201509091452096_AddSessionLogTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510171809212_AddXPToActivityEvents.cs" />
+    <Compile Include="Migrations\201510171809212_AddXPToActivityEvents.Designer.cs">
+      <DependentUpon>201510171809212_AddXPToActivityEvents.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -500,6 +504,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201509091452096_AddSessionLogTable.resx">
       <DependentUpon>201509091452096_AddSessionLogTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510171809212_AddXPToActivityEvents.resx">
+      <DependentUpon>201510171809212_AddXPToActivityEvents.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
