MZ-121 add cms page management  to the prject

--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -3,7 +3,6 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="RaygunSettings" type="Mindscape.Raygun4Net.RaygunSettings, Mindscape.Raygun4Net" />
-
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
   </configSections>
@@ -29,13 +28,21 @@
     <add key="LocalShipping" value="1" />
     <add key="LocalizationLanguages" value="en" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5.2" />
+      </system.Web>
+  -->
   <system.web>
     <anonymousIdentification enabled="true" />
     <authentication mode="Forms">
       <forms loginUrl="/account/sign-in/" cookieless="UseCookies" />
     </authentication>
     <customErrors mode="Off" />
-    <compilation debug="true" targetFramework="4.5.1">
+    <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
@@ -81,7 +88,6 @@
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
-
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
     </modules>
     <staticContent>
@@ -97,7 +103,6 @@
         <clear />
       </customHeaders>
     </httpProtocol>
-
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
