--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -40,7 +40,10 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net451" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
@@ -56,6 +59,7 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="OrangeJetpack.Base.Core" version="0.0.8" targetFramework="net451" />
   <package id="OrangeJetpack.Base.Web" version="0.0.8" targetFramework="net451" />
+  <package id="OrangeJetpack.Cms.Client" version="0.0.17" targetFramework="net452" />
   <package id="OrangeJetpack.Localization" version="1.5.7" targetFramework="net451" />
   <package id="OrangeJetpack.Localization.Mvc" version="1.5.0" targetFramework="net451" />
   <package id="OrangeJetpack.Regionalization" version="0.0.6" targetFramework="net451" />
