--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net451" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net451" />
   <package id="bootstrap" version="3.3.5" targetFramework="net451" />
+  <package id="ckeditor.TypeScript.DefinitelyTyped" version="0.1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="EPPlus" version="4.0.3" targetFramework="net451" />
   <package id="FontAwesome" version="4.2.0" targetFramework="net451" />
