--- a/src/Mzayad.Web/compilerconfig.json
+++ b/src/Mzayad.Web/compilerconfig.json
@@ -6,5 +6,9 @@
   {
     "outputFile": "Content/site-kendo.css",
     "inputFile": "Content/site-kendo.less"
+  },
+  {
+    "outputFile": "Content/site-admin.css",
+    "inputFile": "Content/site-admin.less"
   }
 ]
