--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -78,6 +78,7 @@
     <Compile Include="AutoBid.cs" />
     <Compile Include="Avatar.cs" />
     <Compile Include="Bid.cs" />
+    <Compile Include="BuyNowTransactionModel.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="CategoryNotification.cs" />
     <Compile Include="EmailTemplate.cs" />
