--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -379,6 +379,7 @@
     <Compile Include="Areas\Reports\Models\Products\IndexViewModel.cs" />
     <Compile Include="Areas\Reports\Models\Tokens\TokenLogViewModel.cs" />
     <Compile Include="Areas\Reports\Models\Subscriptions\SubscriptionLogViewModel.cs" />
+    <Compile Include="Areas\Reports\Models\Transactions\BuyNowViewModel.cs" />
     <Compile Include="Areas\Reports\Models\Transactions\KnetViewModel.cs" />
     <Compile Include="Areas\Reports\ReportsAreaRegistration.cs" />
     <Compile Include="Controllers\AuctionsController.cs" />
@@ -676,6 +677,7 @@
     <Content Include="Areas\Admin\Views\PageManagement\Edit.cshtml" />
     <Content Include="Areas\Reports\Views\Products\Index.cshtml" />
     <Content Include="Areas\Reports\Views\Transactions\Knet.cshtml" />
+    <Content Include="Areas\Reports\Views\Transactions\BuyNow.cshtml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="mstile-144x144.png" />
     <Content Include="mstile-150x150.png" />
