--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -51,6 +51,8 @@
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.TypeScript.Compiler" version="1.8.11" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.TypeScript.MSBuild" version="1.8.11" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.11" targetFramework="net452" />
   <package id="Mindscape.Raygun4Net.Core" version="5.0.0" targetFramework="net451" />
