--- a/src/Mzayad.Models/packages.config
+++ b/src/Mzayad.Models/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
-  <package id="OrangeJetpack.Base.Core" version="0.0.8" targetFramework="net451" />
+  <package id="OrangeJetpack.Base.Core" version="0.0.24" targetFramework="net461" />
+  <package id="OrangeJetpack.Base.Data" version="0.1.1" targetFramework="net461" />
   <package id="OrangeJetpack.Localization" version="1.5.7" targetFramework="net451" />
 </packages>
