--- a/src/Mzayad.Services.Tests/packages.config
+++ b/src/Mzayad.Services.Tests/packages.config
@@ -5,5 +5,6 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="OrangeJetpack.Base.Data" version="0.1.2" targetFramework="net461" />
   <package id="OrangeJetpack.Localization" version="1.5.7" targetFramework="net451" />
 </packages>
