--- a/src/Mzayad.AutoBidNotifier/packages.config
+++ b/src/Mzayad.AutoBidNotifier/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.11" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="OrangeJetpack.Base.Data" version="0.1.2" targetFramework="net461" />
   <package id="OrangeJetpack.Localization" version="1.5.6" targetFramework="net45" />
   <package id="OrangeJetpack.Services.Client" version="0.0.33" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.2" targetFramework="net45" />
