--- a/src/Mzayad.WebJobs/packages.config
+++ b/src/Mzayad.WebJobs/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.11" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
+  <package id="OrangeJetpack.Base.Data" version="0.1.2" targetFramework="net461" />
   <package id="OrangeJetpack.Localization" version="1.5.7" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="5.0.2" targetFramework="net451" />
