added nuget.orangejetpack.com to nuget source

--- a/.nuget/NuGet.Config
+++ b/.nuget/NuGet.Config
@@ -3,4 +3,7 @@
   <solution>
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
+  <packageSources>
+    <add key="nuget.orangejetpack.com" value="https://nuget.orangejetpack.com/api/v2" />
+  </packageSources>   
 </configuration>
