--- a/src/Mzayad.Services/packages.config
+++ b/src/Mzayad.Services/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net451" />
