--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "wiki"]
 	path = wiki
-	url = git@bitbucket.org:orangejetpack/mzayad.docs.git/wiki
+	url = git@bitbucket.org:orangejetpack/mzayad.git/wiki
