--- a/src/Mzayad.AutoBidNotifier/Properties/webjob-publish-settings.json
+++ b/src/Mzayad.AutoBidNotifier/Properties/webjob-publish-settings.json
@@ -1,6 +1,6 @@
 ﻿{
   "$schema": "http://schemastore.org/schemas/json/webjob-publish-settings.json",
-  "webJobName": "MzayadAutoBidNotifier",
+  "webJobName": "AutoBidNotifier",
   "startTime": null,
   "endTime": null,
   "jobRecurrenceFrequency": null,
