MZ-177 add accountant role migration; move admin menu to partial view; add admin menu to reports area

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -351,6 +351,10 @@
     <Compile Include="Migrations\201610311118454_AddUserAutoBidNotification.Designer.cs">
       <DependentUpon>201610311118454_AddUserAutoBidNotification.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610311207225_AddAccountantRole.cs" />
+    <Compile Include="Migrations\201610311207225_AddAccountantRole.Designer.cs">
+      <DependentUpon>201610311207225_AddAccountantRole.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -571,6 +575,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610311118454_AddUserAutoBidNotification.resx">
       <DependentUpon>201610311118454_AddUserAutoBidNotification.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610311207225_AddAccountantRole.resx">
+      <DependentUpon>201610311207225_AddAccountantRole.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
