MZ-180 added order model to resolve circular reference error

--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Order.cs" />
     <Compile Include="OrderItem.cs" />
     <Compile Include="OrderLog.cs" />
+    <Compile Include="OrderModel.cs" />
     <Compile Include="Payment\InitTransactionResult.cs" />
     <Compile Include="Payment\KnetResponse.cs" />
     <Compile Include="Payment\KnetTransaction.cs" />
