--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -359,6 +359,10 @@
     <Compile Include="Migrations\201610311300061_AddTokenLogUsage.Designer.cs">
       <DependentUpon>201610311300061_AddTokenLogUsage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610311352398_AddFloorandFlatToAddress.cs" />
+    <Compile Include="Migrations\201610311352398_AddFloorandFlatToAddress.Designer.cs">
+      <DependentUpon>201610311352398_AddFloorandFlatToAddress.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -585,6 +589,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610311300061_AddTokenLogUsage.resx">
       <DependentUpon>201610311300061_AddTokenLogUsage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610311352398_AddFloorandFlatToAddress.resx">
+      <DependentUpon>201610311352398_AddFloorandFlatToAddress.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
